# momentobooth-companion-app

./: .gitignore  Gemfile  README.md  justfile  pubspec.yaml
.github/workflows/: pr-ci-app-android.yml  pr-ci-app-ios.yml  release-android.yml  release-ios.yml
.templates/view/: __templateNameToSnakeCase__.dart  __templateNameToSnakeCase___controller.dart  __templateNameToSnakeCase___view.dart  __templateNameToSnakeCase___view_model.dart
android/app/: build.gradle  build.gradle.kts
assets/lottie/: Animation - 1712764053420.json  CREDITS.txt
fastlane/: Fastfile  Matchfile  README.md
integration_test/: simple_test.dart
ios/: exportOptions.plist
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_localizations.dart  main.dart  main.routes.dart  widgetbook.dart
lib/extensions/: build_context_extension.dart
lib/l10n/: app_en.arb  app_nl.arb
lib/managers/: mqtt_manager.dart  settings_manager.dart
lib/misc/: logger.dart
lib/models/: settings.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/api/: mod.rs
rust/src/utils/: mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_momentoboothcompanionapp.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_momentoboothcompanionapp.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+21 files in other folders)
