[package]
name = "rust_lib_momentoboothcompanionapp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.4.0", features = ["chrono"] }
url = "2.5.2"
ipp = "5.0.4"
chrono = "0.4.38"

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "*", features = ["vendored"] }

[profile.dev]
opt-level = 3
